2007-10-10  Benjamin Kosnik  <bkoz@redhat.com>

PR libstdc++/33633
	* include/debug/hash_multimap.h: Change _GLIBCXX_EXT to _GLIBCXX_EXT_D.
	* include/debug/hash_set.h: Same.
	* include/debug/hash_multiset.h: Same.
	* include/debug/hash_map.h: Same.

2007-10-10  Benjamin Kosnik  <bkoz@redhat.com>

	* include/parallel/losertree.h (loser_tree_traits_unguarded): To 
	loser_tree_unguarded_traits.
	* include/parallel/multiway_merge.h (__gnu_parallel): Same.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129210 138bc75d-0d04-0410-961f-82ee72b054a4